Bug #9803: Don't allow zero-sized width/height.

A bad configuration can result in height or width being zero. This potentially
causes a divide-by-zero error in xf86EloConvert().
Detect the bad configuration early on and produce a meaningful error message.

X.Org Bugzilla #9803 <https://bugs.freedesktop.org/show_bug.cgi?id=9803>